--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -34,3 +34,9 @@ supporters:
   social:
     twitter: trustin
     linkedin: trustin
+- name: Justin Lee
+  github: evanchooly
+  social:
+    twitter: evanchooly
+    mastodon: @evanchooly@mastodon.social 
+    bluesky: @evanchooly.bsky.social
